# tree-sitter-capnp

./: .eslintrc.js  .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  release-please-config.json
.github/workflows/: ci.yml  publish.yml  release.yml
bindings/c/: tree-sitter.pc.in
bindings/go/: binding.go  binding_test.go  go.mod  go.sum
bindings/node/: binding.cc  index.js
bindings/python/: ffibuilder.py  meson.build  pyproject.toml  setup.py
bindings/python/tree_sitter_capnp/: __init__.py
bindings/rust/: README.md  lib.rs
bindings/swift/: capnp.h
bindings/zig/: build.zig
examples/: 02-comments.capnp  03-structs.capnp  04-unions.capnp  05-groups.capnp  06-enums.capnp  07-interfaces.capnp  08-generics.capnp  09-constants.capnp  10-nesting-scope-and-aliases.capnp  11-imports.capnp  12-annotations.capnp  13-unique-ids.capnp
queries/: highlights.scm  locals.scm
script/: parse-examples
src/: grammar.json  node-types.json  parser.c
test/corpus/: annotations  annotations.txt  constants  constants.txt  generics  generics.txt  interface  interfaces  interfaces.txt  struct  structs  structs.txt  text  text.txt
