[package]
name = "tree-sitter-capnp"
description = "Cap'n Proto grammar for tree-sitter"
version = "1.3.0"
authors = ["Amaan Qureshi <amaanq12@gmail.com>"]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "capnp"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/amaanq/tree-sitter-capnp"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.3"

[build-dependencies]
cc = "~1.0"
