[package]
name = "tree-sitter-capnp"
version = "1.6.0"
authors = ["Amaan Qureshi <amaanq12@gmail.com>"]
autoexamples = false
categories = ["parsing", "text-editors"]
edition = "2021"
keywords = ["incremental", "parsing", "capnp"]
license = "MIT"
readme = "bindings/rust/README.md"
repository = "https://github.com/amaanq/tree-sitter-capnp"
description = "Cap'n Proto grammar for tree-sitter"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "~1.0"
