[build-system]
requires = ["meson-python", "meson >= 0.64.0", "cffi"]
build-backend = "mesonpy"

[project]
name = "tree-sitter-capnp"
version = "0.0.1"
description = "Capnp grammar for Tree-Sitter"
license.text = "MIT"
urls.repository = "http://github.com/tree-sitter/tree-sitter-capnp"
requires-python = ">=3.6"
keywords = ["parsing", "incremental", "capnp"]
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Topic :: Text Processing :: Linguistic",
]
dependencies = ["cffi"]
